Refactor , remove unused